fix: Rewrite WebSocket path to strip /ws/live prefix before proxying to backend

--- a/nginx/ilenia.link3rs.com.conf
+++ b/nginx/ilenia.link3rs.com.conf
@@ -86,10 +86,13 @@ server {
     # ============================================
 
     # Live Event Service WebSockets
-    location ~ ^/ws/live/v2/(captions|speaker|manager) {
+    # Matches: /ws/live/v2/speaker/{eventId}/{channelId}
+    # Rewrites to: /v2/speaker/{eventId}/{channelId}
+    location ~ ^/ws/live(/v2/(captions|speaker|manager).*) {
         limit_req zone=ws_limit burst=10 nodelay;
 
-        proxy_pass http://backend_live;
+        # Rewrite to remove /ws/live prefix, keeping /v2/... path
+        proxy_pass http://backend_live$1;
         proxy_http_version 1.1;
         
         # WebSocket upgrade headers
