--- a/.github/workflows/nginx-docker-build.yml
+++ b/.github/workflows/nginx-docker-build.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Nginx - Build and Push Docker Image
 
 on:
   push:
@@ -49,7 +49,7 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
+            type=sha,prefix=sha-
 
       - name: Build and push Docker image
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09  # v5.0.0
