--- a/nginx/ilenia.link3rs.com.conf
+++ b/nginx/ilenia.link3rs.com.conf
@@ -1,26 +1,17 @@
 # Nginx configuration for Ilenia on DigitalOcean Droplet
 # Domain: ilenia.link3rs.com
-# Path-based routing for multiple services
+# Path-based routing for Docker services
+# All services communicate via Docker network using service names
 
-# Upstream definitions
+# Upstream definitions - using Docker service names
 upstream backend_live {
-    server localhost:8082;
+    server live-service:8082;
     keepalive 32;
 }
 
-upstream backend_auth {
-    server localhost:8081;
+upstream frontend_app {
+    server react-frontend:80;
     keepalive 32;
-}
-
-upstream backend_livekit {
-    server localhost:8086;
-    keepalive 32;
-}
-
-upstream frontend {
-    server localhost:3000;  # If running React dev server
-    # Or use root directive to serve static files
 }
 
 # Rate limiting zones
@@ -95,10 +86,13 @@ server {
     # ============================================
 
     # Live Event Service WebSockets
-    location ~ ^/ws/live/v2/(captions|speaker|manager) {
+    # Matches: /ws/live/v2/speaker/{eventId}/{channelId}
+    # Rewrites to: /v2/speaker/{eventId}/{channelId}
+    location ~ ^/ws/live(/v2/(captions|speaker|manager).*) {
         limit_req zone=ws_limit burst=10 nodelay;
 
-        proxy_pass http://backend_live;
+        # Rewrite to remove /ws/live prefix, keeping /v2/... path
+        proxy_pass http://backend_live$1;
         proxy_http_version 1.1;
         
         # WebSocket upgrade headers
@@ -168,94 +162,31 @@ server {
         }
     }
 
-    # Auth Service API
-    location /api/auth/ {
-        limit_req zone=api_limit burst=20 nodelay;
-
-        proxy_pass http://backend_auth/;
-        proxy_http_version 1.1;
-        
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_connect_timeout 30s;
-        proxy_send_timeout 30s;
-        proxy_read_timeout 30s;
-
-        # CORS headers
-        add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept" always;
-
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin * always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept" always;
-            add_header Access-Control-Max-Age 1728000;
-            return 204;
-        }
-    }
-
-    # LiveKit Service API
-    location /api/livekit/ {
-        limit_req zone=api_limit burst=20 nodelay;
-
-        proxy_pass http://backend_livekit/;
-        proxy_http_version 1.1;
-        
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_connect_timeout 30s;
-        proxy_send_timeout 30s;
-        proxy_read_timeout 30s;
-
-        # CORS headers
-        add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept" always;
-
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin * always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept" always;
-            add_header Access-Control-Max-Age 1728000;
-            return 204;
-        }
-    }
-
     # ============================================
-    # Frontend (React App)
+    # Frontend (React App in Docker)
     # ============================================
 
-    # Static assets with caching
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        root /var/www/ilenia-frontend;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+    # Health check endpoint for nginx itself
+    location = /health {
         access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
     }
 
-    # Health check endpoint
-    location /health {
-        root /var/www/ilenia-frontend;
-        try_files /health.html =200;
-        access_log off;
-    }
-
-    # React app (SPA) - serve index.html for all routes
+    # Proxy all other requests to frontend container
     location / {
-        root /var/www/ilenia-frontend;
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://frontend_app;
+        proxy_http_version 1.1;
         
-        # No caching for index.html
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Timeouts
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
     }
 
     # Deny access to hidden files
