Update to v2.1.1 Auth OpenAPI Spec

--- a/docker-compose.no-auth.yml
+++ b/docker-compose.no-auth.yml
@@ -135,11 +135,15 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
-
+# ============================================
+# Networks
+# ============================================
 networks:
   ilenia-net:
     driver: bridge
-
+# ============================================
+# Volumes
+# ============================================
 volumes:
   certbot-webroot:
   nginx-logs:
