--- a/nginx/ilenia.link3rs.com.conf
+++ b/nginx/ilenia.link3rs.com.conf
@@ -9,6 +9,11 @@ upstream backend_live {
     keepalive 32;
 }
 
+upstream backend_auth {
+    server auth-service:8081;
+    keepalive 32;
+}
+
 upstream frontend_app {
     server react-frontend:80;
     keepalive 32;
@@ -125,6 +130,26 @@ server {
     # ============================================
     # REST API Routes (https://)
     # ============================================
+
+    # Auth Service API
+    location /api/auth/ {
+        limit_req zone=api_limit burst=20 nodelay;
+
+        proxy_pass http://backend_auth/;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
 
     # Live Event Service API
     location /api/live/ {
