--- a/.env
+++ b/.env
@@ -26,13 +26,13 @@ ASR_SPEECH_PAD_MS=400
 # Auth Service (REQUIRED)
 # =============================================================================
 # JWT/Auth configuration
-AUTH_ISSUER=https://auth.ilenia.link3rs.com
+AUTH_ISSUER=auth-service
 ACCESS_TTL_SECONDS=3600
 
 # Admin seed user (created on first startup)
-AUTH_SEED_ADMIN_EMAIL=admin@example.com
-AUTH_SEED_ADMIN_PASSWORD=changeme_secure_password
-AUTH_SEED_ADMIN_NAME=Admin
+AUTH_SEED_ADMIN_EMAIL=admin@ilenia.com
+AUTH_SEED_ADMIN_PASSWORD=123456
+AUTH_SEED_ADMIN_NAME=DefaultAdmin
 AUTH_SEED_ADMIN_LANG=en
 
 # Database (optional - uses SQLite by default)
