--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,20 +1,18 @@
-version: "3.9"
-
-# Ilenia Production Stack for DigitalOcean Droplet v2.2.0
-# All services from GHCR with Nginx as reverse proxy
+# Ilenia Local Development Stack v2.2.0
+# Backend services only - run frontend locally with `npm run dev`
 #
 # Usage:
 #   docker login ghcr.io -u YOUR_GITHUB_USERNAME -p YOUR_GITHUB_TOKEN
-#   docker-compose pull
-#   docker-compose up -d
+#   docker-compose -f docker-compose.local.yml pull
+#   docker-compose -f docker-compose.local.yml up -d
 #
-# Services:
-#   - nginx:          Reverse proxy with SSL (ports 80, 443)
-#   - react-frontend: React SPA (internal port 80)
-#   - auth-service:   Authentication service (internal port 8081)
-#   - live-service:   Live event service (internal port 8082)
-#   - event-service:  Event management service (internal port 8083)
-
+# Then run frontend locally:
+#   cd ilenia-react-frontend && npm run dev
+#
+# Services exposed:
+#   - auth-service:  http://localhost:8081
+#   - live-service:  http://localhost:8082
+#   - event-service: http://localhost:8083
 
 services:
   # ============================================
@@ -37,72 +35,6 @@ services:
       timeout: 3s
       retries: 3
       start_period: 5s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  # ============================================
-  # Nginx Reverse Proxy
-  # ============================================
-  nginx:
-    image: ghcr.io/link3rs/ilenia-nginx:main
-    container_name: ilenia-nginx
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      # SSL certificates from Let's Encrypt
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-      - certbot-webroot:/var/www/certbot
-      # Nginx logs
-      - nginx-logs:/var/log/nginx
-    depends_on:
-      - react-frontend
-      - live-service
-      - auth-service
-      - event-service
-    networks:
-      - ilenia-net
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/health"]
-      interval: 30s
-      timeout: 3s
-      retries: 3
-      start_period: 10s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  # ============================================
-  # React Frontend
-  # ============================================
-  react-frontend:
-    image: ghcr.io/link3rs/ilenia-react-frontend:main
-    container_name: ilenia-frontend
-    restart: unless-stopped
-    expose:
-      - "80"
-    environment:
-      - VITE_ENV=production
-      - VITE_PRODUCTION_DOMAIN=ilenia.link3rs.com
-    networks:
-      - ilenia-net
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1/health"]
-      interval: 30s
-      timeout: 3s
-      retries: 3
-      start_period: 10s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
   # ============================================
   # Live Event Service (STT, MT, TTS)
@@ -111,13 +43,13 @@ services:
     image: ghcr.io/link3rs/ilenia-live-event-service:main
     container_name: ilenia-live-service
     restart: unless-stopped
-    expose:
-      - "8082"
+    ports:
+      - "8082:8082"
     environment:
-      - ENV=production
+      - ENV=development
       - APP_HOST=0.0.0.0
       - APP_PORT=8082
-      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - LOG_LEVEL=${LOG_LEVEL:-DEBUG}
       - HF_ASR_URL=${HF_ASR_URL}
       - HF_ASR_TOKEN=${HF_ASR_TOKEN}
       - HF_MT_URL=${HF_MT_URL}
@@ -126,11 +58,10 @@ services:
       - ASR_MIN_SPEECH_DURATION_MS=${ASR_MIN_SPEECH_DURATION_MS:-300}
       - ASR_MIN_SILENCE_DURATION_MS=${ASR_MIN_SILENCE_DURATION_MS:-500}
       - ASR_SPEECH_PAD_MS=${ASR_SPEECH_PAD_MS:-400}
-      # Redis configuration
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      # Events persistence (Phase 1: JSON file, Phase 2: PostgreSQL via event-service)
       - EVENTS_STORAGE_PATH=/app/data/events.json
+      - ALLOWED_ORIGINS=["http://localhost","http://localhost:5173","http://127.0.0.1","http://127.0.0.1:5173"]
     depends_on:
       redis:
         condition: service_healthy
@@ -146,11 +77,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
   # ============================================
   # Auth Keys Init (fix volume ownership)
@@ -176,23 +102,20 @@ services:
     depends_on:
       auth-keys-init:
         condition: service_completed_successfully
-    expose:
-      - "8081"
+    ports:
+      - "8081:8081"
     environment:
-      - ENV=production
+      - ENV=development
       - PORT=8081
-      # JWT/Auth configuration
-      - AUTH_ISSUER=${AUTH_ISSUER:-https://auth.ilenia.link3rs.com}
+      - AUTH_ISSUER=${AUTH_ISSUER:-http://localhost}
       - AUTH_AUDIENCE=event-service,livekit-service,live-event-service
       - ACCESS_TTL_SECONDS=${ACCESS_TTL_SECONDS:-3600}
       - KEYS_DIR=/app/keys
-      # Admin seed user
-      - AUTH_SEED_ADMIN_EMAIL=${AUTH_SEED_ADMIN_EMAIL}
-      - AUTH_SEED_ADMIN_PASSWORD=${AUTH_SEED_ADMIN_PASSWORD}
+      - AUTH_SEED_ADMIN_EMAIL=${AUTH_SEED_ADMIN_EMAIL:-admin@localhost}
+      - AUTH_SEED_ADMIN_PASSWORD=${AUTH_SEED_ADMIN_PASSWORD:-admin123}
       - AUTH_SEED_ADMIN_NAME=${AUTH_SEED_ADMIN_NAME:-Admin}
       - AUTH_SEED_ADMIN_LANG=${AUTH_SEED_ADMIN_LANG:-en}
-      # Database (if using PostgreSQL)
-      # - DATABASE_URL=${AUTH_DATABASE_URL}
+      - ALLOWED_ORIGINS=["http://localhost","http://localhost:5173","http://127.0.0.1","http://127.0.0.1:5173"]
     volumes:
       - auth-keys:/app/keys
     networks:
@@ -203,11 +126,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 20s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
   # ============================================
   # Event Service (Events CRUD API)
@@ -216,20 +134,17 @@ services:
     image: ghcr.io/link3rs/ilenia-events-service:main
     container_name: ilenia-event-service
     restart: unless-stopped
-    expose:
-      - "8083"
+    ports:
+      - "8083:8083"
     environment:
-      - ENV=production
+      - ENV=development
       - APP_HOST=0.0.0.0
       - APP_PORT=8083
-      - LOG_LEVEL=${LOG_LEVEL:-INFO}
-      # CORS - allowed origins
-      - ALLOWED_ORIGINS=["https://ilenia.link3rs.com"]
-      # JWT validation (uses auth-service JWKS)
+      - LOG_LEVEL=${LOG_LEVEL:-DEBUG}
+      - ALLOWED_ORIGINS=["http://localhost","http://localhost:5173","http://127.0.0.1","http://127.0.0.1:5173"]
       - AUTH_SERVICE_URL=http://auth-service:8081
-      - AUTH_ISSUER=${AUTH_ISSUER:-https://auth.ilenia.link3rs.com}
+      - AUTH_ISSUER=${AUTH_ISSUER:-http://localhost}
       - AUTH_AUDIENCE=event-service
-      # Events persistence (JSON file)
       - EVENTS_STORAGE_PATH=/app/data/events.json
     depends_on:
       auth-service:
@@ -244,11 +159,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 20s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
 # ============================================
 # Networks
@@ -261,8 +171,6 @@ networks:
 # Volumes
 # ============================================
 volumes:
-  certbot-webroot:
-  nginx-logs:
   live-recordings:
   live-logs:
   live-data:
