--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -1,7 +1,6 @@
-# Nginx configuration for Ilenia on DigitalOcean Droplet
-# Domain: ilenia.link3rs.com
-# Path-based routing for Docker services
-# All services communicate via Docker network using service names
+# Nginx configuration for Ilenia Local Development
+# HTTP only (no SSL) for local testing
+# Access: http://localhost
 
 # Upstream definitions - using Docker service names
 upstream backend_live {
@@ -34,49 +33,10 @@ map $http_upgrade $connection_upgrade {
     '' close;
 }
 
-# HTTP to HTTPS redirect
+# HTTP server (no SSL for local development)
 server {
     listen 80;
-    listen [::]:80;
-    server_name ilenia.link3rs.com;
-
-    # Let's Encrypt ACME challenge
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    # Redirect all other traffic to HTTPS
-    location / {
-        return 301 https://$server_name$request_uri;
-    }
-}
-
-# HTTPS server
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name ilenia.link3rs.com;
-
-    # SSL certificates (Let's Encrypt)
-    ssl_certificate /etc/letsencrypt/live/ilenia.link3rs.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ilenia.link3rs.com/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/ilenia.link3rs.com/chain.pem;
-
-    # SSL configuration (Mozilla Intermediate)
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    ssl_stapling on;
-    ssl_stapling_verify on;
-
-    # Security headers
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    server_name localhost;
 
     # Logging
     access_log /var/log/nginx/ilenia.access.log;
@@ -92,16 +52,13 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
 
     # ============================================
-    # WebSocket Routes (wss://)
+    # WebSocket Routes (ws://)
     # ============================================
 
     # Live Event Service WebSockets
-    # Matches: /ws/live/v2/speaker/{eventId}/{channelId}
-    # Rewrites to: /v2/speaker/{eventId}/{channelId}
     location ~ ^/ws/live(/v2/(captions|speaker|manager).*) {
         limit_req zone=ws_limit burst=10 nodelay;
 
-        # Rewrite to remove /ws/live prefix, keeping /v2/... path
         proxy_pass http://backend_live$1;
         proxy_http_version 1.1;
         
@@ -133,7 +90,7 @@ server {
     }
 
     # ============================================
-    # REST API Routes (https://)
+    # REST API Routes (http://)
     # ============================================
 
     # Auth Service API
