Initial main version

--- a/.env.example
+++ b/.env.example
@@ -26,14 +26,28 @@ ASR_SPEECH_PAD_MS=400
 # Auth Service (REQUIRED)
 # =============================================================================
 # JWT/Auth configuration
-AUTH_ISSUER=https://auth.ilenia.link3rs.com
+AUTH_ISSUER=http://127.0.0.1:8081
 ACCESS_TTL_SECONDS=3600
 
 # Admin seed user (created on first startup)
-AUTH_SEED_ADMIN_EMAIL=admin@example.com
-AUTH_SEED_ADMIN_PASSWORD=changeme_secure_password
-AUTH_SEED_ADMIN_NAME=Admin
+AUTH_SEED_ADMIN_EMAIL=admin@ilenia.com
+AUTH_SEED_ADMIN_PASSWORD=admin123
+AUTH_SEED_ADMIN_NAME="Default Admin"
 AUTH_SEED_ADMIN_LANG=en
 
-# Database (optional - uses SQLite by default)
-# AUTH_DATABASE_URL=postgresql://user:password@host:5432/dbname
+# =============================================================================
+# PostgreSQL Database (REQUIRED for production)
+# =============================================================================
+# Admin credentials (for init script)
+POSTGRES_ADMIN_PASSWORD=ilenia_admin_secret
+
+# Auth service database credentials
+POSTGRES_AUTH_PASSWORD=auth_secret
+
+# Events service database credentials
+POSTGRES_EVENTS_PASSWORD=events_secret
+
+# Connection URLs (used by services)
+# For Docker: host is 'postgres' (container name)
+AUTH_DATABASE_URL=postgresql+asyncpg://ilenia_auth_user:auth_secret@postgres:5432/ilenia_auth
+EVENTS_DATABASE_URL=postgresql+asyncpg://ilenia_events_user:events_secret@postgres:5432/ilenia_events
