--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ ASR_SPEECH_PAD_MS=400
 # Auth Service (REQUIRED)
 # =============================================================================
 # JWT/Auth configuration
-AUTH_ISSUER=http://127.0.0.1:8081
+AUTH_ISSUER=http://127.0.0.1:8081/v2
 ACCESS_TTL_SECONDS=3600
 
 # Admin seed user (created on first startup)
